# coin-crab

./: .env-example  .env.client  .env.example  .env.local  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  README.md  build_ios.sh  rumqttd.toml  rust_ios_lib.h  test_all_timeframes.rs  test_ios_endpoint.py  test_timeframes.py
.github/workflows/: deploy-server.yml
crates/ios_lib/: .env.client  Cargo.toml  rust_ios_lib.h
crates/ios_lib/src/: config.rs  ffi.rs  globals.rs  lib.rs  types.rs
crates/ios_lib/src/mqtt/: client.rs  connection.rs  message_handler.rs  mod.rs
crates/server/: .env.server.example  Cargo.toml
crates/server/src/: config.rs  data.rs  handlers.rs  main.rs  types.rs
crates/server/src/mqtt/: broker.rs  client.rs  mod.rs  publisher.rs  request_handler.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  logging.rs  types.rs
ios_app/CoinCrab/: .env.client  .env.client.local  CoinCrab-Bridging-Header.h  CoinCrabApp.swift  ContentView.swift  CryptoChartView.swift  Info.plist  TradingViewChartView.swift  rust_ios_lib.h
ios_app/CoinCrab.xcodeproj/: project.pbxproj
ios_app/CoinCrab.xcodeproj/project.xcworkspace/xcuserdata/marcel.xcuserdatad/: UserInterfaceState.xcuserstate
ios_app/CoinCrab.xcodeproj/xcuserdata/marcel.xcuserdatad/xcschemes/: xcschememanagement.plist
ios_app/CoinCrab/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios_app/CoinCrab/Assets.xcassets/AppLogo.imageset/: Contents.json
ios_app/RustHelloApp/: ContentView.swift  RustHelloAppApp.swift
ios_app/RustHelloApp.xcodeproj/: project.pbxproj
ios_app/RustHelloApp.xcodeproj/project.xcworkspace/xcuserdata/marcel.xcuserdatad/: UserInterfaceState.xcuserstate
ios_app/RustHelloApp.xcodeproj/xcuserdata/marcel.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: lib.rs  server.rs  test_api.rs  test_c_function.rs  test_historical.rs  test_specific_symbols.rs  test_timeframes.rs
