[package]
name = "rust_ios_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_ios_lib"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "crypto_server"
path = "src/server.rs"

[[bin]]
name = "mqtt_test_client"
path = "src/mqtt_test_client.rs"

[dependencies]
libc = "0.2"
actix-web = "4.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
# MQTT dependencies
rumqttd = "0.18"
rumqttc = "0.24"
toml = "0.8"

[target.'cfg(target_os = "ios")'.dependencies]