[workspace]
members = [
    "crates/server",
    "crates/ios_lib", 
    "crates/shared"
]
resolver = "2"

# Workspace-wide settings
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CoinCrab Team"]

# Shared dependencies that can be inherited by workspace members
[workspace.dependencies]
libc = "0.2"
actix-web = "4.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
# MQTT dependencies
rumqttd = "0.18"
rumqttc = "0.24"
toml = "0.8"