[package]
name = "coin-crab-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Inherit workspace dependencies
actix-web = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
rumqttd = { workspace = true }
rumqttc = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }

# Server-specific dependencies
shared = { path = "../shared" }