[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
# Common dependencies for shared data structures and utilities
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }